fix: don't hide graph container, widen gap between cols

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -30,7 +30,7 @@
   --container-max-width: 770px;
   --main-padding: 16px 10px 20rem;
   --main-padding-mobile: 0 1.2rem 20rem;
-  --column-gap: 24px;
+  --column-gap: 48px;
   --nav-sidebar-width: 200px;
   --nav-sidebar-offset: 0px;
 
